update size ttd

--- a/style.css
+++ b/style.css
@@ -134,6 +134,9 @@ img.ttd-cap {
 img.ttd {
   height: 1.9cm; /* 8vw ke cm */
 }
+img.ttd2 {
+  height: 2.3cm; /* 8vw ke cm */
+}
 
 
 /* QR Code Styling */
